can't delete animation of duplicated environment (world) #81248

Closed
opened 2020-09-28 13:25:36 +02:00 by gurlaldeep singh · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0

Short description of error
when I delete animation of one environment it also deletes animation of 2nd environment

Exact steps for others to reproduce the error
step 1: animate any property of any node in the world tap
step 2: duplicate the world
step 3: try to delete the animation of any one of the world without deleting other

note* I am not sure if I explain it well because of my poor English
so I have attached videos.
which will make more sense.
2020-09-28 16-52-10.mp4

blend file
bug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` **Short description of error** when I delete animation of one environment it also deletes animation of 2nd environment **Exact steps for others to reproduce the error** step 1: animate any property of any node in the world tap step 2: duplicate the world step 3: try to delete the animation of any one of the world without deleting other note* I am not sure if I explain it well because of my poor English so I have attached videos. which will make more sense. [2020-09-28 16-52-10.mp4](https://archive.blender.org/developer/F8931569/2020-09-28_16-52-10.mp4) blend file [bug.blend](https://archive.blender.org/developer/F8931574/bug.blend)

Added subscriber: @gurlaldeep

Added subscriber: @gurlaldeep
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-09-29 09:48:44 +02:00
Member

Can confirm, will check.

Can confirm, will check.

This issue was referenced by f79b4850fb

This issue was referenced by f79b4850fb3c29bf2a153428b1b4d4b5f67121f9

Added subscriber: @mont29

Added subscriber: @mont29

Technically not a bug, just that Action data-block remains shared between both materials… But agree it should probably be duplicated as well by default (until we take userpref settings into account).

Technically not a bug, just that Action data-block remains shared between both materials… But agree it should probably be duplicated as well by default (until we take userpref settings into account).

yes this doesn't happen if we duplicate object materials
this problem is only in the world (environment)

yes this doesn't happen if we duplicate object materials this problem is only in the world (environment)
Member

Fix is on the way.
Currently double-checking the Assert from #81267 (Assert adding a new material with animation through the material template_ID) -- which is also in effect with D9046: Fix #81248: World nodetree action is linked after duplication

Fix is on the way. Currently double-checking the Assert from #81267 (Assert adding a new material with animation through the material template_ID) -- which is also in effect with [D9046: Fix #81248: World nodetree action is linked after duplication](https://archive.blender.org/developer/D9046)

@lichtwerk #81267 is now fixed (was unrelated lower-level issue), so think you can now commit the fix for this issue. ;)

@lichtwerk #81267 is now fixed (was unrelated lower-level issue), so think you can now commit the fix for this issue. ;)
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81248
No description provided.